--- a/presentation/dplyr_drug_talk.tex
+++ b/presentation/dplyr_drug_talk.tex
@@ -82,13 +82,15 @@
   \frametitle{Goals:}
 
   \begin{itemize}
-    \item Showcase {\tt dplyr}, compare the ease of use compared to base R.
+    \item Showcase {\tt dplyr}, compare the ease of use and speed to base R.
     \item Introduce the data manipulation grammar and philosophy behind {\tt
       dplyr}
     \item Illustrate the usefulness of the forward-piping operator which is
       part of {\tt dplyr} and extended further in {\tt magrittr}.  
 
-    \item {\tt dplyr} will save time in initial coding, debugging, code
+    \item[]
+
+    \item Convey: {\tt dplyr} will save time in initial coding, debugging, code
       maintenance, \ldots
   \end{itemize}
 
@@ -194,8 +196,8 @@
 \end{alltt}
 \begin{verbatim}
 ##    test replications elapsed relative
-## 1  base          100   95.38    4.034
-## 2 dplyr          100   23.64    1.000
+## 1  base          100   55.52    4.714
+## 2 dplyr          100   11.78    1.000
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
@@ -358,8 +360,8 @@
 \end{alltt}
 \begin{verbatim}
 ##    test replications elapsed relative
-## 1  base          100   0.006      1.0
-## 2 dplyr          100   0.027      4.5
+## 1  base          100   0.003    1.000
+## 2 dplyr          100   0.014    4.667
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
@@ -677,8 +679,8 @@ conditions are supplied they are combined with ‘\&’.
 \end{alltt}
 \begin{verbatim}
 ##    test replications elapsed relative
-## 1  base          100   7.889    5.374
-## 2 dplyr          100   1.468    1.000
+## 1  base          100   3.762    5.436
+## 2 dplyr          100   0.692    1.000
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
@@ -737,8 +739,8 @@ mutate: add new columns. Multiple inputs create multiple columns.
 \end{alltt}
 \begin{verbatim}
 ##    test replications elapsed relative
-## 1  base          100   5.593        1
-## 2 dplyr          100   5.594        1
+## 1  base          100   2.883    1.000
+## 2 dplyr          100   2.907    1.008
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
@@ -824,8 +826,8 @@ inputs create multiple output summaries.  (Two spellings:
 \end{alltt}
 \begin{verbatim}
 ##    test replications elapsed relative
-## 1  base          100  83.044    53.72
-## 2 dplyr          100   1.546     1.00
+## 1  base          100  36.749    53.96
+## 2 dplyr          100   0.681     1.00
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
@@ -1040,7 +1042,7 @@ follow.
 \end{alltt}
 \end{kframe}
 \end{knitrout}
-\pagebreak}
+\pagebreak
 \begin{knitrout}\footnotesize
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
@@ -1081,8 +1083,8 @@ follow.
 \end{alltt}
 \begin{verbatim}
 ##    test replications elapsed relative
-## 1  base          100   4.568    8.957
-## 2 dplyr          100   0.510    1.000
+## 1  base          100   1.958    9.505
+## 2 dplyr          100   0.206    1.000
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
@@ -1146,8 +1148,8 @@ follow.
 \end{alltt}
 \begin{verbatim}
 ##    test replications elapsed relative
-## 1  base          100   5.406    3.096
-## 2 dplyr          100   1.746    1.000
+## 1  base          100   2.174    3.345
+## 2 dplyr          100   0.650    1.000
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
@@ -1258,11 +1260,11 @@ follow.
 ## 21     5946 hartzro01         NA         NA      1881
 ## 22     5470 grempbu01         NA         NA      1919
 ## 23     4690 fredejo01         NA         NA      1902
-## 24     3329 davisik01         NA         NA      1895
-## 25     2905 cottich01 cottich01m         NA      1936
-## 26     2104 caprani01         NA         NA      1958
-## 27     1440 bradlja01         NA         NA      1893
-## 28     3434 deideji01         NA         NA      1949
+## 24     3434 deideji01         NA         NA      1949
+## 25     3329 davisik01         NA         NA      1895
+## 26     2905 cottich01 cottich01m         NA      1936
+## 27     2104 caprani01         NA         NA      1958
+## 28     1440 bradlja01         NA         NA      1893
 ## 29       54 adamsbu01         NA         NA      1915
 ## Variables not shown: birthMonth (int), birthDay (int),
 ##   birthCountry (chr), birthState (chr), birthCity (chr),
@@ -1359,8 +1361,8 @@ follow.
 \end{alltt}
 \begin{verbatim}
 ##    test replications elapsed relative
-## 1  base           10  143.78     3.96
-## 2 dplyr           10   36.31     1.00
+## 1  base           10   64.55    3.389
+## 2 dplyr           10   19.05    1.000
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
@@ -1396,7 +1398,7 @@ follow.
 \end{alltt}
 \end{kframe}
 \end{knitrout}
-  \pagebreak}
+  \pagebreak
 \begin{knitrout}\footnotesize
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
@@ -1433,8 +1435,8 @@ follow.
 \end{alltt}
 \begin{verbatim}
 ##    test replications elapsed relative
-## 1  base         1000   4.493    1.599
-## 2 dplyr         1000   2.810    1.000
+## 1  base         1000   1.999    1.508
+## 2 dplyr         1000   1.326    1.000
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
@@ -1460,25 +1462,25 @@ follow.
 \end{alltt}
 \begin{verbatim}
 ## Changed variables:
-##           old        new      
-## var1      0x2b5df708 0x6d325a0
+##           old       new       
+## var1      0xbbd18a0 0x338247f0
 ## 
 ## Changed attributes:
-##           old       new       
-## row.names 0xc4f9af8 0x2b558c38
+##           old        new       
+## row.names 0x4f7f4b08 0x4f7f4e20
 \end{verbatim}
 \begin{alltt}
 \hlkwd{location}\hlstd{(this_df2)}
 \end{alltt}
 \begin{verbatim}
-## <0x12bf4fc0>
+## <0x64cb160>
 ## Variables:
-##  * var1:      <0x6d325a0>
-##  * var2:      <0xec79aa0>
+##  * var1:      <0x338247f0>
+##  * var2:      <0x449e3410>
 ## Attributes:
-##  * names:     <0x956fbf0 >
-##  * row.names: <0x12ee41c0>
-##  * class:     <0xcf117f8 >
+##  * names:     <0x64cb208 >
+##  * row.names: <0x4f6ea938>
+##  * class:     <0xa0d3df8 >
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
@@ -1503,14 +1505,14 @@ follow.
 \end{alltt}
 \begin{verbatim}
 ## Changed variables:
-##           old       new      
-## var1      0x93df068 0xc2b46f0
+##           old        new      
+## var1      0x125a59d0 0x83ae7e0
 ## 
 ## Changed attributes:
-##           old       new       
-## names     0x8fa0f10 0x12672460
-## class     0xf93da80 0x2185d018
-## row.names 0xc8fa868 0xc8fab80
+##           old        new       
+## names     0x24b6ce78 0x24b73b80
+## class     0xf87ef90  0x839aab8 
+## row.names 0xe9e57e0  0xe9ccda0
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
@@ -1795,7 +1797,7 @@ follow.
 \hlopt{-}\hlnum{2} \hlopt{*} \hlkwd{log}\hlstd{((}\hlnum{1}\hlopt{/}\hlkwd{sqrt}\hlstd{(}\hlnum{2} \hlopt{*} \hlstd{pi} \hlopt{*} \hlstd{sigma}\hlopt{^}\hlnum{2}\hlstd{))}\hlopt{^}\hlstd{(N)} \hlopt{*} \hlkwd{exp}\hlstd{(}\hlopt{-}\hlnum{1}\hlopt{/}\hlstd{(}\hlnum{2} \hlopt{*} \hlstd{sigma}\hlopt{^}\hlnum{2}\hlstd{)} \hlopt{*} \hlkwd{sum}\hlstd{((y} \hlopt{-} \hlstd{mu)}\hlopt{^}\hlnum{2}\hlstd{)))}
 \end{alltt}
 \begin{verbatim}
-## [1] 27.67
+## [1] 25.48
 \end{verbatim}
 \begin{alltt}
 \hlcom{# -2 log likelihood, using forward-piping, somewhat like postfix notation}
@@ -1810,7 +1812,7 @@ follow.
 \hlkwd{multiply_by}\hlstd{(}\hlopt{-}\hlnum{2}\hlstd{)}
 \end{alltt}
 \begin{verbatim}
-## [1] 27.67
+## [1] 25.48
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
@@ -1853,12 +1855,12 @@ What do you think?  Pros and Cons?
 ## other attached packages:
 ## [1] rbenchmark_1.0.0 dplyr_0.2        magrittr_1.0.1  
 ## [4] knitr_1.6        vimcom_0.9-93    setwidth_1.0-3  
-## [7] colorout_1.0-3  
+## [7] colorout_1.0-2  
 ## 
 ## loaded via a namespace (and not attached):
 ##  [1] assertthat_0.1  codetools_0.2-8 digest_0.6.4   
 ##  [4] evaluate_0.5.5  formatR_0.10    highr_0.3      
-##  [7] parallel_3.1.0  Rcpp_0.11.2     stringr_0.6.2  
+##  [7] parallel_3.1.0  Rcpp_0.11.1     stringr_0.6.2  
 ## [10] tools_3.1.0
 \end{verbatim}
 \end{kframe}
@@ -1866,7 +1868,7 @@ What do you think?  Pros and Cons?
 \end{frame} 
 
 \begin{frame}[fragile]
-  \frametitle{DRUG}
+  \frametitle{Denver R User Group Notes}
   \begin{itemize}
     \item Future MeeetUp Topics:
       \begin{itemize}
